tdf#94829: Splash screen sets invalid XSizeHints

Change-Id: I70b86624b4d34eb6cb8f2efee0305539f6689335
Reviewed-on: https://gerrit.libreoffice.org/19219
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit a614568c4356fe37ba132972e6f3649d606e2c9a)